--- a/_posts/2020/servlet/2020-11-24-servlet-4.md
+++ b/_posts/2020/servlet/2020-11-24-servlet-4.md
@@ -14,7 +14,7 @@ toc: true
 toc_sticky: true
 toc_label: Contents
 description: 비트캠프 엄진영 강사님의 수업을 듣고 정리했습니다.
-article_tag1: 1. 
+article_tag1: 1. GET 요청 데이터 읽기
 article_tag2: 2. 
 article_tag3: 3.
 article_tag4: 4.
@@ -79,8 +79,8 @@ last_modified_at: '2020-11-24 22:00:00 +0800'
 ```
 
 - `<form action="s1" method="get">`와 같이 get 요청임을 명시하거나 method를 생략하면 get 요청이다.
-
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/52d121b2-499d-42aa-8468-a91528f2cb85/servlet-4-01.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/52d121b2-499d-42aa-8468-a91528f2cb85/servlet-4-01.png)
+  
+![GET 요청]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-01.png){: .align-center}{: width="100%" height="100%"}
 
 ### 웹 브라우저가 보낸 데이터 읽기
 
@@ -133,7 +133,6 @@ public class Servlet01 extends GenericServlet {
 ### HTTP 요청 형식
 
 - request line + header + CRLF + message-body
-
 ```
 method sp request-URI sp http_version CRLF
 *(general header | request header | entity header) CRLF
@@ -295,7 +294,7 @@ public class Servlet02 extends GenericServlet {
 
 - `<form action="s2" method="post">`와 같이 post 요청임을 명시해야하만 post 요청이다. 생략하면 get요청이다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/1ddb9aca-b3b0-4f18-b0e2-f2526067d083/servlet-4-02.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/1ddb9aca-b3b0-4f18-b0e2-f2526067d083/servlet-4-02.png)
+![POST 요청]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-02.png){: .align-center}{: width="100%" height="100%"}
 
 - `action="/bitcamp-web-project/ex04/s2"`와 같이 절대 경로를 명시하면, 이후 URL을 변경하고 싶을 때마다 모든 html 문서를 찾아 변경해야 한다. **상대 경로**를 적으면 쉽게 수정할 수 있다.
 
@@ -305,8 +304,8 @@ public class Servlet02 extends GenericServlet {
 
 ```
 http://localhost:9999/bitcamp-web-project/ex04/test02.html
-										 ^									 ^
-									server root       context root
+					 ^					 ^
+				 server root       context root
 ```
 
 - 웹 브라우저가 사용하는 루트는 Server Root → **웹 브라우저에게 던져주는 루트는 모두 `Server Root`**
@@ -484,7 +483,7 @@ GET 으로 파일을 전송할 수 없다. 단지 파일 이름만 전송한다.
 </html>
 ```
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/f5a6c4ce-e437-4490-8936-10f46abec737/servlet-4-01.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/f5a6c4ce-e437-4490-8936-10f46abec737/servlet-4-01.png)
+![파일 업로드]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-03.png){: .align-center}{: width="100%" height="100%"}
 
 ```java
 @WebServlet("/ex04/s3")
@@ -507,7 +506,6 @@ public class Servlet03 extends GenericServlet {
     out.printf("나이=%s\n", age);
     out.printf("사진=%s\n", photo);
 
-    //
     // 파일의 데이터를 전송하려면,
     // <form> 태그에 enctype 속성을 "multipart/form-data"로 설정해야 한다.
     //
