--- a/_posts/javaScript/2021-01-11-modernJs-2.1.md
+++ b/_posts/javaScript/2021-01-11-modernJs-2.1.md
@@ -6,7 +6,7 @@ tag:
 - [javaScript, modernJs]
 ---
 
-| 출처 : [모던 JavaScript 튜토리얼](https://ko.javascript.info/)
+출처 : [모던 JavaScript 튜토리얼](https://ko.javascript.info/)
 
 ---
 ## 1. `script` 태그
