--- a/_posts/javaScript/2021-01-14-modernJs-2.7.md
+++ b/_posts/javaScript/2021-01-14-modernJs-2.7.md
@@ -11,405 +11,103 @@ last_modified_at: '2021-01-14 22:00:00 +0800'
 
 ---
 
-## 1. 용어 : '단항', '이항', '피연산자'
+- 함수와 연산자에 전달되는 값은 대부분 적절한 자료형으로 자동 변환된다. 이런 과정을 형 변환(type conversion)이라 한다.
+- `alert`가 전달받은 값의 자료형과 관계없이 이를 문자열로 자동 변환하여 보여주는 것이나, 수학 관련 연산자가 전달받은 값을 숫자로 변환하는 경우가 형 변환의 대표적인 예시이다.
+- 이 외에, 전달받은 값을 의도를 갖고 원하는 타입으로 변환(명시적 변환)해 주는 경우도 형 변환이라고 할 수 있다.
 
-- **피연산자(operand)**는 연산자가 연산을 수행하는 대상이다. `4 * 5`에는 왼쪽 피연산자 `4`와 오른쪽 피연산자 `2`, 총 두 개의 피연산자가 있다. '피연산자'는 '인수(argument)'라는 용어로 불리기도 한다.
-- 피연산자를 하나만 받는 연산자를 **단항(unary)** 연산자라 한다. 피연산자의 부호를 뒤집는 단항 마이너스 연산자 `-`는 단항 연산자의 대표적인 예이다.
+## 1. 문자형으로 변환
+
+- 문자형으로의 형 변환은 문자형의 값이 필요할 때 일어난다.
+- `alert` 메서드는 매개변수로 문자형을 받기 때문에, `alert(value)`에서 value는 문자형이어야 한다. 만약, 다른 형의 값을 전달 받으면 이 값은 문자형으로 자동 변환된다.
+- String(value) 함수를 호출해 전달받은 값을 문자열로 변환할 수도 있다.
 
 ```jsx
-let x = 1;
+let value = true;
+alert(typeof value); // boolean
 
-x = -x; // -는 단항 연산자
-alert(x); // -1, 단항 연산자는 부호를 뒤집는다.
+value = String(value); // 변수 value엔 문자열 "true"가 저장된다.
+alert(typeof value); // string
 ```
 
-- 두 개의 피연산자를 받는 연산자는 이항(binary) 연산자라 부른다. 마이너스 연산자는 이항 연산자로 쓸 수도 있다.
+- `false`는 문자열 `"false"`로, `null`은 문자열 `"null"`로 변환되는 것과 같이, 문자형으로의 변환은 대부분 예측 가능한 방식으로 일어난다.
+
+## 2. 숫자형으로 변환
+
+- 숫자형으로의 변환은 수학과 관련된 함수와 표현식에서 자동으로 일어난다.
+- 예를 들어 숫자형이 아닌 값에 연산자를 적용한 경우 문자열을 숫자형으로 변환한다.
 
 ```jsx
-let x = 1, y = 3;
-alert(y - x); // 2, 이항 마이너스 연산자는 뺄셈을 수행한다.
+alert( "4" / "2" ); // 2, 문자열이 숫자형으로 자동변환된 후 연산이 수행된다.
 ```
 
-- 부호를 반전해주는 단항 마이너스 연산자와 뺄셈에 쓰이는 이항 마이너스 연산자(뺄셈 연산자)는 기호는 같지만 수행하는 연산이 다르다. 두 연산을 구분하는 기준은 피연산자의 개수입니다.
-
-## 2. 수학
-
-### 자바스크립트에서 지원하는 수학 연산자
-
-- 덧셈 연산자 `+`
-- 뺄셈 연산자 `-`
-- 곱셈 연산자 `*`
-- 나눗셈 연산자 `/`
-- 나머지 연산자 `%`
-- 거듭제곱 연산자 `**`
-
-### 나머지 연산자 `%`
-
-- 나머지 연산자(remainder operator)는 `%` 기호로 나타내지만, 비율을 나타내는 퍼센트와 관련이 없다.
-- 나머지 연산자를 사용한 표현식 `a % b`는 `a`를 `b`로 나눈 후 그 나머지(remainer)를 정수로 반환한다.
+- `Number(value)` 함수를 사용하면 주어진 값(`value`)을 숫자형으로 명시해서 변환할 수 있다.
 
 ```jsx
-alert( 7 % 3 ); // 5를 2로 나눈 후의 나머지인 1을 출력
-alert( 10 % 4 ); // 8을 3으로 나눈 후의 나머지인 2를 출력
+let str = "123";
+alert(typeof str);
+
+let num = Number(str);
+alert(typeof num);
 ```
 
-### 거듭제곱 연산자 `**`
-
-- 거듭제곱 연산자(exponentiation operator)를 사용한 `a ** b`를 평가하면 `a`를 `b`번 곱한 값이 반환된다.
+- 숫자형 값을 사용해 무언가를 하려고 하는데, 그 값을 문자 기반(form)을 통해 입력받는 경우에는 명시적 형 변환이 필수이다.
+- 숫자 이외의 글자가 들어가 있는 문자열을 숫자형으로 변환하려고 하면, 그 결과는 `NaN`이 된다.
 
 ```jsx
-alert( 2 ** 2 ); // 4  (2 * 2)
-alert( 2 ** 3 ); // 8  (2 * 2 * 2)
-alert( 2 ** 4 ); // 16 (2 * 2 * 2 * 2)
+let age = Number("임의의 문자열 123");
+
+alert(age); // NaN, 형 변환이 실패한다.
 ```
 
-- 거듭제곱 연산자는 정수가 아닌 숫자에 대해서도 동작한다. 1/2을 사용하면 제곱근을 구할 수 있다.
+- 숫자형으로 변환 시 적용 되는 규칙
+    - `undefined`는 형 변환 후 `NaN`이 된다.
+    - `null`은 형 변환 후 `0`이 된다.
+    - `true and false`는 형 변환 후 `1` 과 `0`이 된다.
+    - `string`의 경우 문자열의 처음과 끝의 공백이 제거되고, 공백 제거 후 남아있는 문자열이 없다면 0, 그렇지 않다면 문자열에서 숫자를 읽는다. 변환에 실패하면 `NaN`이 된다.
+- `null`과 `undefined`은 숫자형으로 변환 시 결과가 다르다는 점에 유의!
 
 ```jsx
-alert( 4 ** (1/2) ); // 2 (1/2 거듭제곱은 제곱근)
-alert( 8 ** (1/3) ); // 2 (1/3 거듭제곱은 세제곱근)
+alert( Number("   123   ") ); // 123
+alert( Number("123z") );      // NaN ("z"를 숫자로 변환하는 데 실패함)
+alert( Number(true) );        // 1
+alert( Number(false) );       // 0
 ```
 
-## 3. 이항 연산자 `+`와 문자열 연결
+## 3. 불린형으로 변환
 
-- 덧셈 연산자 `+`는 대개 숫자를 더한 결과를 반환하는데, 이항 연산자 `+`의 피연산자로 문자열이 전달되면 덧셈 연산자는 덧셈이 아닌 문자열을 병합(연결)한다.
-
-```jsx
-let s = "Hello," + " world!";
-alert(s); // Hello, world!
-```
-
-- 따라서 이항 연산자 +를 사용할 때는 피연산자 중 하나가 문자열이면 다른 하나도 문자열로 변환된다. 첫 번째 피연산자가 문자열인지, 두 번째 피연산자가 문자열인지는 중요하지 않다. 피연산자 중 어느 하나가 문자열이면 다른 하나도 문자열로 변환된다.
+- 이 형 변환은 논리 연산을 수행할 때 발생한다.
+- `Boolean(value)`를 호출하면 명시적으로 불리언으로 형 변환을 수행할 수 있다.
+- 불린형으로 변환 시 적용되는 규칙
+- 숫자 `0`, 빈 문자열, `null`, `undefined`, `NaN`과 같이 직관적으로도 “비어있다고” 느껴지는 값들은 false가 됩니다.
+- 그 외의 값은 `true`로 변환된다.
 
 ```jsx
-alert( '1' + 2 ); // "12"
-alert( 2 + '1' ); // "21"
-```
+alert( Boolean(1) ); // 숫자 1(true)
+alert( Boolean(0) ); // 숫자 0(false)
 
-- 하나의 표현식에서 `+`가 산술 연산자로도 사용되고, 이항 연산자로도 사용될 수도 있다. 연산은 왼쪽에서 오른쪽으로 순차적으로 진행되는데, 아래의 경우 두 개의 숫자 뒤에 문자열이 온다. 이 경우, 숫자가 먼저 더해지고, 그 후 더해진 숫자와 문자열과의 병합이 일어난다.
-
-```jsx
-alert(2 + 2 + '1' ); // '221'이 아니라 '41'이 출력된다.
-```
-
-- 아래는 뺄셈 `-`과 나눗셈 `/` 연산자는 피연산자로 숫자와 문자를 가질 때, 문자형 피연산자를 숫자로 바꾼 후 연산을 진행한다.
-
-```jsx
-alert( 6 - '2' ); // 4, '2'를 숫자로 바꾼 후 연산이 진행된다.
-alert( '6' / '2' ); // 3, 두 피연산자가 숫자로 바뀐 후 연산이 진행된다.
-```
-
-## 4. 단항 연산자 `+`와 숫자형으로의 변환
-
-- 덧셈 연산자 `+`는 이항 연산자 뿐만 아니라 단항 연산자로도 사용할 수 있다.
-- 숫자에 단항 덧셈 연산자를 붙이면 이 연산자는 아무런 동작도 하지 않는다. 그러나 피연산자가 숫자가 아닌 경우엔 숫자형으로 변환이 일어난다.
-
-```jsx
-// 숫자에는 아무런 영향을 미치지 않는다.
-let x = 1;
-alert( +x ); // 1
-
-let y = -2;
-alert( +y ); // -2
-
-// 숫자형이 아닌 피연산자는 숫자형으로 변한다.
-alert( +true ); // 1
-alert( +"" );   // 0
-```
-
-- 단항 덧셈 연산자는 짧은 문법으로도 `Number(...)`와 동일한 일을 할 수 있게 해준다. 문자열을 숫자로 변환해야 할 때 간단하게 사용할 수 있다.
-
-```jsx
-let apples = "2";
-let oranges = "3";
-
-alert( apples + oranges ); // 23, 이항 덧셈 연산자는 문자열을 연결한다.
-
-// 이항 덧셈 연산자가 적용되기 전에, 두 피연산자는 숫자형으로 변한다.
-alert( +apples + +oranges ); // 5
-
-// `Number(...)`를 사용해서 같은 동작을 하는 코드를 작성할 수 있다.
-// alert( Number(apples) + Number(oranges) ); // 5
-```
-
-- 이항 덧셈 연산자가 적용되기 전에 단항 덧셈 연산자가 적용되는 이유는, 연산자 우선순위(precedence) 때문이다. 하나의 표현식에 둘 이상의 연산자가 있는 경우, 실행 순서는 연산자의 우선순위(precedence)에 의해 결정되는데, 동일한 기호의 단항 연산자는 이항 연산자보다 우선순위가 더 높다.
-
-## 5. 할당 연산자
-
-- 무언가를 할당할때 쓰이는 `=`를 할당(assignment) 연산자라 한다. 우선순위는 3으로 아주 낮다.
-- x = 2 * 2 + 1과 같은 표현식에서 계산이 먼저 이뤄지고, 그 결과가 x에 할당되는 이유는 바로 할당 연산자의 우선순위가 낮기 때문이다.
-
-```jsx
-let x = 2 * 2 + 1;
-
-alert( x ); // 5
-```
-
-### 값을 반환하는 할당 연산자
-
-- =는 할당 연산자이기 함축성을 내포하고 있다. 자바스크립트에서 대부분의 연산자들을 값을 반환한다.  `x = value`을 호출하면 `value`가 `x`에 쓰여지고, 이에 더하여 value가 반환된다.
-
-```jsx
-let a = 1;
-let b = 2;
-
-let c = 3 - (a = b + 1); // (a = b + 1)은 a에 값을 할당하고 3을 반환
-
-alert( a ); // 3
-alert( c ); // 0
-```
-
-- 표현식 중간에 할당 연산자가 있을 경우, 반환 값은 이어지는 표현식의 연산에 사용된다.
-
-### 할당 연사 체이닝
-
-- 할당 연산자는 여러 개를 연결할 수도 있다.
-
-```jsx
-let a, b, c;
-
-a = b = c = 2 + 2;
-
-alert( a ); // 4
-alert( b ); // 4
-alert( c ); // 4
-```
-
-- 할당 연산자를 여러 개 연결한 경우, 평가는 우측부터 진행된다. 먼저 가장 우측의 `2 + 2`가 평가되고, 그 결과가 좌측의 `c`, `b`, `a`에 순차적으로 할당된다. 모든 변수가 단일 값을 공유하게 되는 것이다.
-- 되도록이면 연산자를 체이닝 하는것 보다 가독성을 위해 줄을 나눠 코드를 작성하는 것이 좋다.
-
-```jsx
-c = 2 + 2;
-b = c;
-a = c;
-```
-
-## 6. 복합 할당 연산자
-
-- 변수에 연산자를 적용하고 그 결과를 같은 변수에 저장해야 하는 경우에 복합 할당 연산자를 사용한다.
-
-```jsx
-let n = 2;
-n += 5; // n = n + 5와 동일
-n *= 2; // n = n * 2와 동일
-
-alert( n ); // 14
-```
-
-- 복합 할당 연산자는 산술 연산자와 비트 연산자에도 적용할 수 있다. `/=`, `-=` 등의 연산자를 만들 수 있다.
-- 복합 할당 연산자의 우선순위는 할당 연산자와 동일하다. 따라서 대부분 다른 연산자가 실행된 후에 복합 할당 연산자가 실행된다.
-
-```jsx
-let n = 2;
-
-n *= 3 + 5; // n *= 8과 동일
-
-alert( n ); // 16
-```
-
-## 7. 증가·감소 연산자
-
-- 숫자를 하나 늘리거나 줄이는 것은 자주 사용되는데, 자바스크립트에서는 이런 연산을 해주는 연산자를 제공한다.
-- **증가(increment) 연산자** `++`는 변수를 1 증가시킨다.
-
-```jsx
-let counter = 2;
-counter++;      // counter = counter + 1과 동일하게 동작
-alert( counter ); // 3
-```
-
-- **감소(decrement) 연산자** `--`는 변수를 1 감소시킨다.
-
-```jsx
-let counter = 2;
-counter--;      // counter = counter - 1과 동일하게 동작
-alert( counter ); // 1
+alert( Boolean("hello") ); // 문자열(true)
+alert( Boolean("") ); // 빈 문자열(false)
 ```
 
 ### 주의
 
-- 증가/감소 연산자는 변수에만 쓸 수 있다.
-- `5++`와 같이 값에 사용하려고 하면 에러가 발생합니다.
-
-### 후위형·전위형
-
-- `++`와`--` 연산자는 변수 앞이나 뒤에 올 수 있다.
-- `counter++`와 같이 피연산자 뒤에 올 때는, '**후위형(postfix form)**'이라고 부른다.
-- `++counter`와 같이 피연산자 앞에 올 때는, '**전위형(prefix form)**'이라고 부른다.
-- 후위형과 전위형은 피연산자인 `counter`를 `1`만큼 증가시켜 준다는 점에서 동일한 일을 하지만, 전위형은 증가/감소 후의 새로운 값을 반환하는 반면, 후위형은 증가/감소 전의 기존 값을 반환한다.
+- 문자열 `"0"`은 `true`입니다. 자바스크립트에선 비어 있지 않은 문자열은 언제나 `true`입니다.
+- PHP 등의 일부 언어에선 문자열 `"0"`을 `false`로 취급합니다.
 
 ```jsx
-let counter = 1;
-let a = ++counter; // 전위형 ++counter는 counter를 증가시키고 새로운 값 2를 반환
-
-alert(a); // 2
-
-let b = counter++; // 후위형 counter++는 증가 전의 값 2를 반환하고 counter를 증가시킴
-
-alert(b); // 2
+alert( Boolean("0") ); // true
+alert( Boolean(" ") ); // 공백이 있는 문자열도 비어있지 않은 문자열이기 때문에 true로 변환된다.
 ```
 
-- 반환 값을 사용하지 않는 경우라면, 전위형과 후위형엔 차이가 없습니다.
+## 4. 요약
 
-```jsx
-let counter = 0;
-counter++;
-++counter;
-alert( counter ); // 2, 위 두 라인은 동일한 연산을 수행
-```
-
-- 값을 증가시키고 난 후, 증가한 값을 바로 사용하려면 전위형 증가 연산자를 사용하면 된다.
-
-```jsx
-let counter = 0;
-alert( ++counter ); // 1
-```
-
-- 값을 증가시키지만, 증가 전의 기존값을 사용하려면 후위형 증가 연산자를 사용하면 된다.
-
-```jsx
-let counter = 0;
-alert( counter++ ); // 0
-```
-
-### 다른 연산자 사이의 증가/감소 연산자
-
-- `++`/`--` 연산자를 표현식 중간에 사용하는 것도 가능하다. 이때, 증가/감소 연산자의 우선순위는 다른 대부분의 산술 연산자보다 높기 때문에, 평가가 먼저 이뤄진다.
-
-```jsx
-let counter = 1;
-alert( 2 * ++counter ); // ++counter가 먼저 실행되어 2가 리턴되고,최종적으로 4가 출력된다.
-```
-
-```jsx
-let counter = 1;
-alert( 2 * counter++ ); // counter++는 '기존'값을 반환하기 때문에 2가 출력된다.
-```
-
-- 한 줄에서 여러 가지 일을 동시에 하고 있기 때문에 코드의 가독성이 떨어진다. 따라서 '**코드 한 줄엔, 특정 동작 하나**’에 관련된 내용만 작성하는 게 좋다.
-
-```jsx
-let counter = 1;
-alert( 2 * counter );
-counter++;
-```
-
-## 8. 비트 연산자
-
-- 비트 연산자(bitwise operator)는 인수를 32비트 정수로 변환하여 이진 연산을 수행한다.
-- 비트 조작 관련 연산자는 자바스크립트뿐만 아니라 대부분의 프로그래밍 언어에서 지원한다.
-- 비트 연산 시 쓰이는 연산자 목록
-    - 비트 AND ( `&` )
-    - 비트 OR ( `|` )
-    - 비트 XOR ( `^` )
-    - 비트 NOT ( `~` )
-    - 왼쪽 시프트(LEFT SHIFT) ( `<<` )
-    - 오른쪽 시프트(RIGHT SHIFT) ( `>>` )
-    - 부호 없는 오른쪽 시프트(ZERO-FILL RIGHT SHIFT) ( `>>>` )
-- 비트 연산자는 저수준(2진 표현)에서 숫자를 다뤄야 할 때 쓰이므로 흔하게 쓰이진 않지만,  암호를 다뤄야 할 땐 비트 연산자가 유용하다.
-
-## 9. 쉼표 연산자
-
-- 쉼표 연산자(comma operator) `,`는 좀처럼 보기 힘들고, 특이한 연산자이다. 코드를 짧게 쓰려는 의도로 가끔 사용된다.
-- 쉼표 연산자 `,`는 여러 표현식을 코드 한 줄에서 평가할 수 있게 해준다. 이때 표현식 각각이 모두 평가되지만, 마지막 표현식의 평가 결과만 반환된다.
-
-```jsx
-let a = (1 + 2, 3 + 4);
-
-alert( a ); // 7 (3 + 4의 결과, 1 + 2의 결과는 버려진다.)
-```
-
-- 쉼표 연산자의 연산자 우선순위는 할당 연산자 `=` 보다 더 낮다. 위의 코드에서 괄호가 없다면, `a = 1 + 2, 3 + 4`에서 `+`가 먼저 수행되어 `a = 3, 7`이 된다. 할당 연산자 `=`는 쉼표 언산자보다 우선순위가 높기 때문에 `a = 3`이 먼저 실행되고, 나머지(`7`)는 무시된다.
-- 마지막 표현식을 제외한 모든 것을 버리는 연삱
-
-```jsx
-// 한 줄에서 세 개의 연산이 수행됨
-for (a = 1, b = 3, c = a * b; a < 10; a++) {
- ...
-}
-```
-
-- 쉼표 연산자를 사용한 트릭은 여러 자바스크립트 프레임워크에서 볼 수 있다. 쉼표 연산자는 코드 가독성에 도움이 되지 읺으므로 진짜 필요한 경우에만 사용하는 것이 좋다.
-
-## 10. 과제
-
-### 전위형과 후위형
-
-아래 코드가 실행된 후, 변수 `a`, `b`, `c`, `d`엔 각각 어떤 값들이 저장될까요?
-
-```jsx
-let a = 1, b = 1;
-
-let c = ++a; // ?
-let d = b++; // ?
-```
-
-- 풀이
-
-```jsx
-a = 2;
-b = 2;
-c = 2; 
-d = 1;
-```
-
-### 할당 후 결과 예측하기
-
-아래 코드가 실행되고 난 후, `a`와 `x`엔 각각 어떤 값이 저장될까요?
-
-```jsx
-let a = 2;
-
-let x = 1 + (a *= 2);
-```
-
-- 풀이
-
-```jsx
-a = 4;
-x = 5;
-```
-
-### 형변환
-
-아래 표현식들의 결과를 예측해 보세요.
-
-```jsx
-"" + 1 + 0 // "10"
-"" - 1 + 0 // -1
-true + false // 1
-6 / "3" // 2
-"2" * "3" // 6
-4 + 5 + "px" // "9px"
-"$" + 4 + 5 // "$45"
-"4" - 2 // 2
-"4px" - 2 //
-7 / 0 // NaN
-"  -9  " + 5 // " -9 5"
-"  -9  " - 5 // -14
-null + 1 // 1
-undefined + 1 // NaN (undefined는 숫자형으로 변환시 NaN이 된다.)
-" \t \n" - 2 // -2 (" \t \n"는 숫자형으로 변환 시 길이가 0인 문자열로 취급)
-```
-
-### 덧셈 고치기
-
-- 아래 코드는 사용자에게 숫자 2개를 입력받은 다음 그 합을 보여줍니다. 그런데 의도한 대로 예시가 동작하지 않습니다. 프롬프트 창에 세팅한 기본값을 수정하지 않은 경우 덧셈의 결과는 `12`가 됩니다. 왜 그럴까요? 예시가 제대로 동작하도록 코드를 수정해 보세요. 결과는 `3`이 되어야 합니다.
-
-```jsx
-let a = prompt("덧셈할 첫 번째 숫자를 입력해주세요.", 1);
-let b = prompt("덧셈할 두 번째 숫자를 입력해주세요.", 2);
-
-alert(a + b); // 12
-```
-
-- 풀이
-
-```jsx
-// 사용자에게 입력 받은 값이 문자열이기 때문에 12가 출력된다. 숫자로 변환해야 한다.
-
-let a = +prompt("덧셈할 첫 번째 숫자를 입력해주세요.", 1);
-let b = +prompt("덧셈할 두 번째 숫자를 입력해주세요.", 2);
-
-alert(a + b); // 12
-```
+- **문자형으로 변환**은 무언가를 출력할 때 주로 일어난다.
+    - `String(value)`을 사용하면 문자형으로 명시적 변환이 가능하다.
+    - 원시 자료형을 문자형으로 변환할 때는 대부분 그 결과를 예상할 수 있을 정도로 명시적인 방식으로 일어난다.
+- **숫자형으로 변환**은 숫자 관련 연산시 주로 일어난다.
+    - `Number(value)`로도 형 변환을 할 수 있다.
+- 불린형으로 변환은 논리 연산시 발생한다.
+    - `Boolean(value)`으로도 변환할 수 있다.
+- 예외적인 경우
+    - 숫자형으로 변환 시 `undefined`는 `0`이 아니라 `NaN`이 됩니다.
+    - 문자열 `"0"`과 `" "`같은 공백은 불린형으로 변환 시 `true`가 된다.
