--- a/_posts/2020/java-algorithm/2021-01-17-algorithm-01.md
+++ b/_posts/2020/java-algorithm/2021-01-17-algorithm-01.md
@@ -7,7 +7,7 @@ tag:
 last_modified_at: '2021-01-17 22:00:00 +0800'
 ---
 
-출처 : [Do it! 자료구조와 함께 배우는 알고리즘](http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9791163030072)
+출처 : [Do it! 자료구조와 함께 배우는 알고리즘](http://www.easyspub.co.kr/20_Menu/BookView/B001/299/PUB)
 
 ---
 
@@ -54,7 +54,7 @@ public class ex01 {
 ```
 
 - `System.in` :  키보드와 연결된 표준 입력 스트림(standard input stream)
-- `stdIn` : 키보드와 연결된 표준 입력 스트림(System.in)에서 문자나 숫자를 꺼내는 장치 역할
+- `stdIn` : 키보드와 연결된 표준 입력 스트림(`System.in`)에서 문자나 숫자를 꺼내는 장치 역할
 - **실행 결과**
 
 ```
@@ -224,7 +224,7 @@ package chapter01;
 
 import java.util.Scanner;
 
-public class Exercise {
+public class quiz04 {
 
   static int findMed(int a, int b, int c) {
     if (a >= b) {
@@ -262,7 +262,7 @@ public class Exercise {
 }
 ```
 
-- Q4) 중앙값을 구하는 메서드는 다음과 같이 작성할 수도 있다. 그러나 기존에 작성했던 `findMed` 메서드에 비해 효율이 떨어지는데, 그 이유를 설명하세요.
+- Q5) 중앙값을 구하는 메서드는 다음과 같이 작성할 수도 있다. 그러나 기존에 작성했던 `findMed` 메서드에 비해 효율이 떨어지는데, 그 이유를 설명하세요.
 
 ```java
 static int findMed2(int a, int b, int c) {
@@ -274,7 +274,17 @@ static int findMed2(int a, int b, int c) {
  }
 ```
 
-위의 `findMed2` 메서드의 경우, 중앙값을 구하기 위해 같은 연산을 중복해서 수행하기도 하고 기존 메서드보다 더 많은 연산을 수행해야 한다. 기존의 메서드의 경우에 최대 3번 연산을 수행하는데, `findMed2`의 경우에는 최대 9번의 연산을수행한다.
+위의 `findMed2` 메서드의 경우, 중앙값을 구하기 위해 같은 연산을 중복해서 수행하기도 하고 기존 메서드보다 더 많은 연산을 수행해야 한다. 
+
+```java
+//	가장 처음의 if문의 판단
+//	if ((b >= a && c<= a) || (b <= a && c >= a))
+//	에 주목합니다. 
+//  여기서 b >= a 및 b <= a의 판단을 뒤집은 판단(실질적으로 같은 판단)을 이어지는 else 이후의 
+//	else if ((a > b && c < b) || (b <= a && c > b))
+//	으로 수행합니다. 
+//  결국 가장 처음의 if가 성립한 경우 2 번째의 if에서도 (실질적으로)같은 판단을 수행하므로 효율이 나빠집니다.
+```
 
 ## (2) 조건 판단과 분기
 
@@ -348,7 +358,7 @@ else
     - 2항 연산자 : 피연산자 2개. 예) `a < b`
     - 3항 연산자 : 피연산자 3개. 예) `a ? b : c`
 - 조건 연산자(conditional operator)  `? :`  는 자바에서 유일한 2항 연산자이다.
-    - `a ? b : c`는 `a`가 true이면 `b`를 반환하고, false이면 `c`를 반환한다.
+    - `a ? b : c`는 `a`가 `true`이면 `b`를 반환하고, `false`이면 `c`를 반환한다.
 
 ## (3) 순서도의 기호
 
@@ -359,3 +369,749 @@ else
 - **루프 범위(loop limit)** : 두 부분으로 구성되어 루프트 시작과 종료를 나타낸다. 기호의 두 부분에는 같은 이름(루프에 대한 임의의 이름)을 사용한다.
 - **선(line)** : 제어의 흐름을 나타낸다. 흐름의 방향을 분명히 나타내고자 할 때 화살표를 붙인다. 선은 위에서 아래로 내려가는 것이 원칙이다.
 - **단말(terminator)** : 외부 환경으로 나가거나 외부 환경에서 들어오는 것을 나타낸다. 예를 들어 프로그램 흐름의 시작과 종료를 나타낸다.
+
+# 01-2 반복
+
+## (1) 1부터 n까지의 정수 합 구하기
+
+- 사용자에게 하나의 정수를 입력받아 1부터 그 정수까지의 합을 구하는 프로그램을 작성한다.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class ex05 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+
+    System.out.println("1부터 n까지의 합 구하기");
+    System.out.print("n의 값 : ");
+    int n = stdIn.nextInt();
+
+    int sum = 0;
+    int i = 1;
+
+		// 변수 i의 값이 n 이하인 동안
+		// i의 값을 1씩 증가하면서 루프 본문을 n회 반복 실행
+    while (i <= n) {
+      sum += i;
+      i++; // 최종 i의 값은 n이 아니라 n+1이다.
+    }
+
+    System.out.printf("1부터 %d까지의 합 : %d", n, sum);
+  }
+}
+```
+
+- 실행 결과
+
+```
+1부터 n까지의 합 구하기
+n의 값 : 10
+1부터 10까지의 합 : 55
+```
+
+### while문 반복
+
+- 어떤 조건이 성립하는 동안 처리를 방복하여 실행하는 것을 **반복(repetition) 구조**라 하며 일반적으로 **루프(loop)**라고 부른다.
+- `while`문은 실행전에 반복을 계속할지를 판단하는데, 이를 '**사전 판단 반복 구조**'라고 부른다. 제어식의 평갓값이 `0`이 아니면 프로그램 명령문이 반복된다. 반복의 대상이 되는 '명령문'을 문법적으로는 루프 본문이라 한다.
+
+```java
+while(제어식) 명령문
+```
+
+### for문 반복
+
+- 하나의 변수를 사용하는 반복문은 `for`문을 사용하는 것이 좋다.
+- 초기화 부분은 `for`문을 실행학기 전에 한 번만 실행한다. 제어식을 평가한 값이 `true`이면 `for`문의 명령문을 반복한다. 명령문을 실행한 다음에는 업데이트 부분을 실행한다.
+
+```java
+for(초기화 부분; 제어식; 업데이트 부분) 명령문
+```
+
+- `1`부터 `n`까지의 정수의 합을 `for`문으로 구하는 프로그램을 작성한다.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class ex06 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+
+    System.out.println("1부터 n까지의 합 구하기");
+    System.out.print("n의 값 : ");
+    int n = stdIn.nextInt();
+
+    int sum = 0;
+
+    for (int i = 1; i <= n; i++) {
+      sum += i;
+    }
+
+    System.out.printf("1부터 %d까지의 합 : %d", n, sum);
+  }
+}
+```
+
+- 실행 결과
+
+```
+1부터 n까지의 합 구하기
+n의 값 : 10
+1부터 10까지의 합 : 55
+```
+
+### for문 자세히 알아보기
+
+- `for`문의 초기화 부분, 제어식, 업데이트 부분은 생략이 가능하다. 세 부분 모두 생략이 가능하지만 세미콜론(`;`)은 생략하면 안된다.
+- `for`문의 초기화 부분에서 선언한 변수는 `for`문 안에서만 유효하다. 따라서 `for`문을 종료한 다음에도 변수를 사용하려면 `for`문 바깥 부분에서 변수를 선언해야 한다.
+
+```java
+int i;
+for (int 1; i <= n; i++) {
+	sum += i;
+}
+```
+
+- 같은 함수의 하나 이상의 `for`문에서 같은 이름의 변수를 사용하려면 각 `for`문마다 변수를 선언하면 된다.
+
+```java
+for (int i = 1; i <= 3; i++) {
+	sum += i;
+}
+
+for (int i = 1; i <= 5; i++) {
+	System.out.println(i);
+}
+```
+
+### 연습문제
+
+- Q6) `ex05`의 `while`문이 종료될 때 변수 `i`의 값이 `n+1`이 됨을 확인하세요(변수 i값을 출력하도록 프로그램을 수정하세요)
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class quiz06 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+
+    System.out.println("1부터 n까지의 합 구하기");
+    System.out.print("n의 값 : ");
+    int n = stdIn.nextInt();
+
+    int sum = 0;
+    int i = 1;
+
+    while (i <= n) {
+      sum += i;
+      i++;
+    }
+    
+		System.out.println("i = " + i);
+    System.out.printf("1부터 %d까지의 합 : %d", n, sum);
+  }
+}
+```
+
+- Q7) `n`이 `7`이면 `'1 + 2 + 3 + 4+ 5+ 6+ 7 = 28'`로 출력하는 프로그램을 작성하세요.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class quie07 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+
+    System.out.println("1부터 n까지의 합 구하기");
+    System.out.print("n의 값 : ");
+    int n = stdIn.nextInt();
+
+    int sum = 0;
+
+    for (int i = 1; i <= n; i++) {
+      sum += i;
+      if (i < n) {
+        System.out.print(i + " + ");
+      } else {
+        System.out.print(i + " = ");
+      }
+    }
+
+    System.out.print(sum);
+  }
+}
+```
+
+- Q8) `1`부터 `10`까지의 합은 `(1+10)*5`와 같은 방법으로 구할 수 있습니다. 가우스의 덧셈이라는 방법을 이용하여 `1`부터 `n`까지의 정수 합을 구하는 프로그램을 작성하세요.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class quiz08 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+
+    System.out.println("1부터 n까지의 합 구하기");
+    System.out.print("n의 값 : ");
+    int n = stdIn.nextInt();
+
+    int sum = (n + 1) * (n / 2) + (n % 2 == 1 ? (n + 1) / 2 : 0);
+
+    System.out.printf("1부터 %d까지의 합 : %d", n, sum);
+  }
+}
+```
+
+- Q9) 정수 `a`, `b`를 포함하여 그 사이의 모든 정수의 합을 구하여 반환하는 메서드를 작성하세요.
+
+```java
+// 나의 풀이
+static int sumof(int a, int b) {
+  int sum = 0;
+
+  if (a >= b) {
+    for (int i = b; i <= a; i++) {
+      sum += i;
+    }
+  } else {
+    for (int i = a; i <= b; i++) {
+      sum += i;
+    }
+  }
+  return sum;
+}
+
+// 해설
+static int sumof(int a, int b) {
+  int min; // a, b의 작은 쪽의 값
+  int max; // a, b의 큰 쪽의 값
+
+	if (a < b) {
+		min = a;
+		max = b;
+	} else {
+		min = b;
+		max = a;
+	}
+
+	int sum = 0; // 합
+	for (int i = min; i <= max; i++)
+		sum += i;
+	return (sum);
+}
+```
+
+## (2) 양수만 입력하기
+
+- `1`부터 `n`까지의 정수의 합을 구하는 프로그램을 작성하되, 사용자가 `n`의 값으로 `0` 이하의 값을 입력하면 다시 `'n의 값 : '`이라고 출력되며 사용자에게 다시 입력할 것을 요구하도록 한다.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class ex06 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+    int n;
+
+    System.out.println("1부터 n까지의 합 구하기");
+
+    // n이 0보다 클 때까지 반복
+    do {
+      System.out.print("n의 값 : ");
+      n = stdIn.nextInt();
+    } while (n <= 0);
+
+    int sum = 0;
+
+    for (int i = 1; i <= n; i++) {
+      sum += i;
+    }
+
+    System.out.printf("1부터 %d까지의 합 : %d", n, sum);
+  }
+}
+```
+
+- 실행 결과
+
+```
+1부터 n까지의 합 구하기
+n의 값 : -5
+n의 값 : 0
+n의 값 : 10
+1부터 10까지의 합 : 55
+```
+
+### do문
+
+- `do`문은 일단 루프 본문을 한 번 실행한 다음에 계속 반복할 것인지를 판단하는 사후 판단 반복문이다. `while`문과 마찬가지로 `()` 안의 제어식을 평가한 값이 `0`이 아니면 루프 본문의 명령문이 반복된다.
+
+```java
+do문 while(제어식);
+```
+
+- 위의 코드에서는 양수만 입력 받기 위해 `do`문으로 프로그램을 작성했다. 변수 `n`에 입력한 값이 `0`이하면 루프 본문이 반복 실행된다. 그러므로 `do`문이 종료될 때 `n`의 값은 반드시 양수여야 한다.
+
+### 사전 판단 반복과 사후 판단 반복의 차이점
+
+- 사전 판단 반복문인 `while`문과 `for`문은 처음에 제어식을 평가한 결과가 `0`이면 루프 본문은 한 번도 실행되지 않는다.
+- 사후 판단 반복문인 `do`문은 루프 본문이 반드시 한 번은 실행된다.
+
+### 연습 문제
+
+- Q10) 오른쪽과 같이 두 변수 `a`, `b`에 정수를 입력하고 `b - a`를 출력하는 프로그램을 작성하세요. 단, 변수 `b`에 입력한 값이 `a` 이하면변 변수 `b`의 값을 다시 입력하세요.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+// 나의 풀이
+public class quiz10 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+    int a, b;
+
+    System.out.print("a의 값 : ");
+    a = stdIn.nextInt();
+
+    do {
+      System.out.print("b의 값 : ");
+      b = stdIn.nextInt();
+    } while (b <= a);
+
+    System.out.printf("b - a는 %d입니다.", b - a);
+  }
+}
+
+// 해설
+class Difference_01_10 {
+	public static void main(String[] args) {
+		Scanner stdIn = new Scanner(System.in);
+
+		System.out.print("a의 값：");
+		int a = stdIn.nextInt();
+
+		int b=0;
+		while (true) {
+			System.out.print("b의 값：");
+			b = stdIn.nextInt();
+			if (b > a)
+				break;
+			System.out.println("a보다 큰 값을 입력하세요!");
+		}
+
+		System.out.println("b - a는 " + (b - a) + "입니다.");
+	}
+}
+```
+
+- Q11) 양의 정수를 입력하고 자릿수를 출력하는 프로그램을 작성하세요. 예를 들어 `135`를 입력하면 '그 수는 3자리입니다.'라고 출력하고, `1314`를 입력하면 '그 수는 4자리입니다.'라고 출력하면 됩니다.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class quiz11 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+
+    int n;
+    do {
+      System.out.print("양의 정수를 입력하세요 > ");
+        n = stdIn.nextInt();
+    } while (n <= 0);
+
+    int result = 0;
+    while (n > 0) {
+      n /= 10;
+      result++;
+    }
+
+    System.out.printf("입력한 수는 %d자리수 입니다.", result);
+  }
+}
+```
+
+## (3) 구조적 프로그래밍
+
+- 하나의 입구와 하나의 출구를 가진 구성 요소만을 계층적으로 배치하여 프로그램을 구성하는 방법을 **구조적 프로그래밍(structured programming)**이라고 한다. 구조적 프로그래밍은 순처, 선택, 반복이라는 3종류의 제어 흐름을 사용한다.
+- 사용자가 입력할 수 있는 값을 '2자리 양수'로 제한하는 프로그램을 작성한다.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class ex07 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+    int n;
+
+    do {
+      System.out.print("2자리의 정수를 입력하세요 > ");
+        n = stdIn.nextInt();
+    } while (n < 10 || n  > 99);
+			// 입력한 값이 10보다 작거나 99보다 크면 루프 본문을 반복
+
+    System.out.printf("입력한 수는 %d 입니다.", n);
+  }
+}
+```
+
+- 실행 결과
+
+```java
+2자리의 정수를 입력하세요 > 1
+2자리의 정수를 입력하세요 > 100
+2자리의 정수를 입력하세요 > 10
+입력한 수는 10 입니다.
+```
+
+### 논리 연산자의 단축 평가
+
+- 논리 연산의 식 전체를 평가한 결과가 왼쪽 피연산자의 평가 결과만으로 정확해지는 경우 오른쪽 피연산자의 평가를 수행하지 않는데, 이를 **단축 평가(short circuit evaluation)**라고 한다.
+    - `||` 연산자의 왼쪽 피연산자를 평가한 값이 `true`이면 오른쪽 피연산자는 평가하지 않는다.
+    - `&&` 연산자의 경우 왼쪽 피연산자를 평가한 값이 `false`이면 오른쪽 피연산자는 평가하지 않는다.
+    - 예) `ex07`에서 사용자가 입력한 값이 `1`인 경우 `n < 10`의 평갓값은 true이므로 오른쪽 `n > 99`를 평가하지 않아도 제어식 `n < 10 || n > 99`의 값이 true가 된다.
+
+### 드모르간 법칙
+
+- '각 조건을 부정하고 논리곱을 논리합으로, 논리합을 논리곱으로 바꾸고 다시 전체를 부정하면 원래의 조건과 같다'라는 법칙을 **드모르간 법칙(De Morgan's laws)**이라고 한다.
+
+```
+x && y와 !(!x || !yy)는 같다.
+x || y와 !(!x && !y)는 같다.
+```
+
+- 예)  `ex07`에서 사용자가 입력한 수가 2자리 수인지 검사하는 제어식  `(n < 10 || n > 99)`는 반복을 계속하는  '**계속 조건**'인 반면, `!(n >= 10 || n <= 99)`는 반복을 종료하는 '**종료 조건**'의 부정이다.
+
+## (4) 다중 루프
+
+- 반복 안에서 다시 반복을 할 수 있다. 반복 루프가 중첩되는 수준에 따라 '이중 루프, 삼중 루프'라고 한다.
+
+### 곱셈표
+
+- 곱셈표를 출력하는 프로그램을 작성한다.
+
+```java
+package chapter01;
+
+public class ex08 {
+  public static void main(String[] args) {
+    System.out.println("---------- 곱셈표 ----------");
+
+    for (int i = 1; i <= 9; i++) {
+      for (int j = 1; j <= 9; j++) {
+        System.out.printf("%3d", i * j);
+      }
+      System.out.println();
+    }
+
+  }
+}
+```
+
+- 실행 결과
+
+```
+---------- 곱셈표 ----------
+  1  2  3  4  5  6  7  8  9
+  2  4  6  8 10 12 14 16 18
+  3  6  9 12 15 18 21 24 27
+  4  8 12 16 20 24 28 32 36
+  5 10 15 20 25 30 35 40 45
+  6 12 18 24 30 36 42 48 54
+  7 14 21 28 35 42 49 56 63
+  8 16 24 32 40 48 56 64 72
+  9 18 27 36 45 54 63 72 81
+```
+
+- 바깥쪽의 `for`문(행 루프)은 세로 방향에 대한 반복이다.  변수 `i`의 값을 `1`부터 `9`까지 증가시키며, 각각의 반복은 표의 '1행, 2행, ... 9행'에 해당한다.
+- 안쪽의 `for`문(열 루프)은 각 행의 가로 방향에 대한 반복이다. 각각의 행에서 변수 `j`의 값을 `1`부터 `9`까지 증가시킨다.
+- 변수 `i`의 값을 `1`부터 `9`까지 증가시키는 '행 루프'는 9회 반복되고, 각각의 반복으로 변수 `j`의 값을 `1`부터 `9`까지 증가시키는'열 루프'가 9회 반복된다.
+- 열 루프 종료 후 줄바꿈 문자의 출력은 `1`부터 `9`까지 출력을 완료한 행에서 줄을 바꾸어 다음 행을 출력하기 위해 사용한다.
+- 이중 루프는 아래와 같이 처리된다.
+
+```
+i가 1일 때 : j를 1→9로 증가시키면서 1 * j를 출력한다. 그리고 줄 바꿈한다.
+i가 2일 때 : j를 1→9로 증가시키면서 2 * j를 출력한다. 그리고 줄 바꿈한다.
+i가 3일 때 : j를 1→9로 증가시키면서 3 * j를 출력한다. 그리고 줄 바꿈한다.
+
+...
+
+i가 9일 때 : j를 1→9로 증가시키면서 9 * j를 출력한다. 그리고 줄 바꿈한다.
+```
+
+### 연습 문제
+
+- Q12) 위쪽과 왼쪽에 곱하는 수가 있는 곱셈표를 출력하는 프로그램을 작성하세요. 구분선은 기호(`|`), 마이너스 기호(`-`), 플러스 기호(`+`)를 사용하세요.
+
+```java
+package chapter01;
+
+public class quiz12 {
+  public static void main(String[] args) {
+
+    System.out.print("  |");
+    for (int i = 1; i <= 9; i++) {
+      System.out.printf("%3d", i);
+    }
+    System.out.println();
+    System.out.println("--+----------------------------");
+
+    for (int i = 1; i <= 9; i++) {
+      System.out.printf("%2d|", i);
+      for (int j = 1; j <= 9; j++) {
+        System.out.printf("%3d", i * j);
+      }
+      System.out.println();
+    }
+
+  }
+}
+```
+
+- Q13) 곱셈이 아니라 덧셈을 출력하는 프로그램을 작성하세요. Q12와 같이 표의 위쪽과 왼쪽에 더하는 수를 출력하세요.
+
+```java
+package chapter01;
+
+public class quiz13 {
+  public static void main(String[] args) {
+
+    System.out.print("  |");
+    for (int i = 1; i <= 9; i++) {
+      System.out.printf("%3d", i);
+    }
+    System.out.println();
+    System.out.println("--+----------------------------");
+
+    for (int i = 1; i <= 9; i++) {
+      System.out.printf("%2d|", i);
+      for (int j = 1; j <= 9; j++) {
+        System.out.printf("%3d", i + j);
+      }
+      System.out.println();
+    }
+
+  }
+}
+```
+
+- Q14) 입력한 수를 한 변으로 하는 정사각형을 `*` 기호로 출력하는 프로그램을 작성하세요.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class quiz14 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+    System.out.println("정사각형 출력");
+    System.out.print("단 수 : ");
+    int n = stdIn.nextInt();
+
+    for (int i = 1; i <= n; i++) {
+      for (int j = 1; j <= n; j++) {
+        System.out.print("*");
+      }
+      System.out.println();
+    }
+
+  }
+}
+```
+
+## (5) 직각 이등변 삼각형 출력
+
+- 이중 루프를 응용하면 기호를 늘어놓아 삼각형이나 사각형 모양으로 출력할 수있다.
+- 사용자가 양의 정수를 입력하면 왼쪽 아래가 직각인 이등변 삼각형을 출력하는 프로그램을 작성한다.
+
+```java
+package chapter01;
+
+import java.util.Scanner;
+
+public class ex09 {
+  public static void main(String[] args) {
+    Scanner stdIn = new Scanner(System.in);
+    int n;
+
+    System.out.println("왼쪽 아래가 직각인 이등변 삼각형 출력");
+
+    do {
+      System.out.print("몇 단 삼각형입니까? ");
+      n = stdIn.nextInt();
+    } while(n <= 0);
+
+    for (int i = 1; i <= n; i++) {
+      for (int j = 1; j <= i; j++) {
+        System.out.print("*");
+      }
+      System.out.println();
+    }
+
+  }
+}
+```
+
+- 실행 결과
+
+```
+왼쪽 아래가 직각인 이등변 삼각형 출력
+몇 단 삼각형입니까? 5
+*
+**
+***
+****
+*****
+```
+
+- 바깥쪽 `for`문(행 루프)은 변수 `i`의 값을 `1`부터 `n`, 즉 5까지 증가시킨다. 이것은 삼각형의 각 행에 대응하는 세로 방향 반복이다. 안쪽 `for`문(열 루프)은 변수 `i`의 값을 `1`부터 `i`까지 증가시키면서 출력한다.
+- 이중 루프는 아래와 같이 처리된다.
+
+```
+i가 1일 때 : j를 1→1로 증가시키면서 *를 출력한다. 그리고 줄 바꿈한다. (*)
+i가 2일 때 : j를 1→2로 증가시키면서 *를 출력한다. 그리고 줄 바꿈한다. (**)
+i가 3일 때 : j를 1→3로 증가시키면서 *를 출력한다. 그리고 줄 바꿈한다. (***)
+i가 4일 때 : j를 1→4로 증가시키면서 *를 출력한다. 그리고 줄 바꿈한다. (****)
+i가 5일 때 : j를 1→5로 증가시키면서 *를 출력한다. 그리고 줄 바꿈한다. (*****)
+```
+
+### 연습 문제
+
+- Q15) 다양한 이등변 삼각형을 출력하는 부분을 아래와 같은 형식의 메서드로 작성하세요.
+
+```java
+static void triangleLB(int n) // 왼쪽 아래가 직각인 이등변 삼각형 출력
+static void triangleLU(int n) // 왼쪽 위가 직각인 이등변 삼각형 출력
+static void triangleRU(int n) // 오른쪽 위가 직각인 이등변 삼각형 출력
+static void triangleRB(int n) // 오른쪽 아래가 직각인 이등변 삼각형 출력
+```
+
+```java
+// 왼쪽 아래가 직각인 이등변 삼각형 출력
+static void triangleLB(int n) {
+  for (int i = 1; i <= n; i++) {
+    for (int j = 1; j <= i; j++) {
+      System.out.print("*");
+    }
+	  System.out.println();
+	}
+}
+
+// 왼쪽 위가 직각인 이등변 삼각형 출력
+// 나의 풀이
+static void triangleLU(int n) {
+  for (int i = n; i <= n && i > 0; i--) {
+    for (int j = 1; j <= i ; j++) {
+      System.out.print("*");
+    }
+    System.out.println();
+  }
+}
+
+// 해설
+static void triangleLU(int n) {
+	for (int i = 1; i <= n; i++) { // i행 (i = 1, 2, … ,n)
+		for (int j = 1; j <= n - i + 1; j++) // n-i+1개의 '*'를 나타냄
+			System.out.print('*');
+		System.out.println();
+	}
+}
+
+// 오른쪽 위가 직각인 이등변 삼각형 출력
+static void triangleRU(int n) {
+  for (int i = 1; i <= n; i++) { // i행 (i = 1, 2, … ,n)
+    for (int j = 1; j <= i - 1; j++) // i-1개의 ' '를 나타냄
+      System.out.print(' ');
+    for (int j = 1; j <= n - i + 1; j++) // n-i+1개의 '*'를 나타냄
+      System.out.print('*');
+    System.out.println();
+  }
+}
+
+// 오른쪽 아래가 직각인 이등변 삼각형 출력
+// 나의 풀이
+static void triangleRB(int n) {
+  for (int i = 1; i <= n; i++) {
+    for (int j = n; j > i ; j--) {
+      System.out.print(" ");
+    }
+    for (int j = 1; j <= i; j++) {
+      System.out.print("*");
+    }
+    System.out.println();
+  }
+}
+
+// 해설
+static void triangleRB(int n) {
+	for (int i = 1; i <= n; i++) { // i행 (i = 1, 2, … ,ln)
+		for (int j = 1; j <= n - i; j++) // n-i개의 ' '를 나타냄
+			System.out.print(' ');
+		for (int j = 1; j <= i; j++) // i개의 '*'를 나타냄
+			System.out.print('*');
+		System.out.println();
+	}
+}
+```
+
+- Q16) n단의 피라미드를 출력하는 메서드를 작성하는데, i행에는 `(i-1)*2+1`개의 기호 문자 `*`가 출력되게 하세요.
+
+```java
+// 나의 풀이
+static void spira(int n) {
+  for (int i = 1; i <= n; i++) {
+    for (int j = 1; j <= n - i; j++) {
+      System.out.print(" ");
+    }
+    for (int j = 1; j <= 2 * i - 1; j++) {
+      System.out.print("*");
+    }
+    System.out.println();
+  }
+}
+
+// 해설
+static void spira(int n) {
+  for (int i = 1; i <= n; i++) { // i행 (i = 1, 2, … ,n)
+    for (int j = 1; j <= n - i + 1; j++) // n-i+1개의 ' '를 나타냄
+      System.out.print(' ');
+    for (int j = 1; j <= (i - 1) * 2 + 1; j++) // (i-1)*2+1개의 '*'를 나타냄
+      System.out.print('*');
+    System.out.println();
+  }
+}
+```
+
+- Q17) 아래를 향한 `n`단의 숫자 피라미드를 출력하는 메서드를 작성하는데,  `i`행에 출력하는 숫자는 `i % 10`으로 구하세요.
+
+```java
+static void npira(int n) {
+  for (int i = 1; i <= n; i++) {
+    for (int j = 1; j <= n - i; j++) {
+      System.out.print(" ");
+    }
+    for (int j = 1; j <= 2 * i - 1; j++) {
+      System.out.print(i%10);
+    }
+    System.out.println();
+  }
+}
+```
