--- a/_posts/java-algorithm/2021-01-19-algorithm-02.md
+++ b/_posts/java-algorithm/2021-01-19-algorithm-02.md
@@ -1,5 +1,5 @@
 ---
-title: '02. 기본 구조'
+title: '[Do it! 알고리즘]02. 기본 구조'
 categories:
 - java
 tag:
@@ -1309,7 +1309,7 @@ x[1] = new int[4];
 - 배열 초기화는 마지막 요소에 대한 초기화 뒤에 “추가로” 쉼표(`,`)를 넣을 수 있다.
 
 ```java
-int[] a = {1, 2, 3, 4,};
+int[] a = {1, 2, 3, 4};
 ```
 
 - 다차원 배열의 복제(clone)는 최상위의 1레벨만 수행한다.
