--- a/_posts/java-algorithm/2021-01-19-algorithm-02.md
+++ b/_posts/java-algorithm/2021-01-19-algorithm-02.md
@@ -1309,16 +1309,11 @@ x[1] = new int[4];
 - 배열 초기화는 마지막 요소에 대한 초기화 뒤에 “추가로” 쉼표(`,`)를 넣을 수 있다.
 
 ```java
-int[] a = {1, 2, 3, 4};
+int[] a = {1, 2, 3, 4,};
 ```
 
 - 다차원 배열의 복제(clone)는 최상위의 1레벨만 수행한다.
 
-```java
-// a[0]과 a[1]만 복제되고 그 아래 레벨의 배열은 복제되지 않고 공유된다.
-int[][] a = {{1, 2, 3, 4}, {5, 6, 7}};
-int[][] b = a.clone();
-```
 
 - 확장된 for문은 배열의 스캔을 매우 간단하게 구현할 수 있다.
 
